k8s/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kong
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.version: 1.26.0 (40646f47)
      labels:
        io.kompose.service: kong
    spec:
      containers:
        - env:
            - name: KONG_ADMIN_ACCESS_LOG
              value: /dev/stdout
            - name: KONG_ADMIN_ERROR_LOG
              value: /dev/stderr
            - name: KONG_ADMIN_LISTEN
              value: 0.0.0.0:8001, 0.0.0.0:8444 ssl
            - name: KONG_DATABASE
              value: "off"
            - name: KONG_DECLARATIVE_CONFIG
              value: /kong/kong.yaml
            - name: KONG_PROXY_ACCESS_LOG
              value: /dev/stdout
            - name: KONG_PROXY_ERROR_LOG
              value: /dev/stderr
          image: kong:2.4.0
          imagePullPolicy: Always
          name: kong
          ports:
            - containerPort: 8000
            - containerPort: 8443
            - containerPort: 8001
            - containerPort: 8444
          volumeMounts:
            - mountPath: /kong
              name: kong-cm
      restartPolicy: Always
      volumes:
        - name: kong-cm
          configMap:
            name: kong-cm
