k8s/kong-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.26.0 (40646f47)
    #cloud.google.com/backend-config: '{"ports": {"8000": "kong-hc-config"}}'
  labels:
    io.kompose.service: kong
  name: kong
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "443"
      port: 443
      targetPort: 8443
    - name: "8001"
      port: 8001
      targetPort: 8001
    - name: "8444"
      port: 8444
      targetPort: 8444
  selector:
    io.kompose.service: kong
