k8s/starbucks-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.26.0 (40646f47)
    networking.gke.io/load-balancer-type: "Internal"
  labels:
    io.kompose.service: starbucks-api
  name: starbucks-api
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: "api"
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    io.kompose.service: starbucks-api
