k8s/starbucks-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: starbucks-client
  name: starbucks-client
spec:
  type: NodePort
  ports:
    - name: "client"
      port: 80
      targetPort: 8081
  selector:
    io.kompose.service: starbucks-client
