k8s/starbucks-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "gce"
  labels:
    io.kompose.service: starbucks-client
  name: starbucks-client
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: starbucks-client
                port:
                  number: 80
